--- a/MC.css
+++ b/MC.css
@@ -68,3 +68,67 @@ body {
     color: #7FADE3;
     
 }
+
+#RME {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 400px;
+    height: 60px;
+    text-align: center;
+    line-height: 60px;
+    color: #fff;
+    font-size: 24px;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-family: sans-serif;
+    box-sizing: border-box;
+    background-size:400%;
+    border-radius: 30px;
+    z-index: 1;
+    color: #7FADE3;
+    
+}
+#RMEINFO {
+    position: absolute;
+    top: 20%;
+    left: 25%;
+    transform: translate(-50%,-50%);
+    width: 400px;
+    height: 60px;
+    text-align: center;
+    line-height: 60px;
+    color: #fff;
+    font-size: 24px;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-family: sans-serif;
+    box-sizing: border-box;
+    background-size:400%;
+    border-radius: 30px;
+    z-index: 1;
+    color: #7FADE3;
+    
+}
+#RMEYT {
+    position: absolute;
+    top: 20%;
+    left: 75%;
+    transform: translate(-50%,-50%);
+    width: 400px;
+    height: 60px;
+    text-align: center;
+    line-height: 60px;
+    color: #fff;
+    font-size: 24px;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-family: sans-serif;
+    box-sizing: border-box;
+    background-size:400%;
+    border-radius: 30px;
+    z-index: 1;
+    color: #7FADE3;
+    
+}
