--- a/changelog.css
+++ b/changelog.css
@@ -1,12 +1,7 @@
-body {
-    background-color: #003087;
-}
-
-
-#Csharp {
+#sepeighttwenty {
     position: absolute;
-    top: 50%;
-    left: 65%;
+    top: 10%;
+    left: 50%;
     transform: translate(-50%,-50%);
     width: 200px;
     height: 60px;
@@ -22,15 +17,13 @@ body {
     border-radius: 30px;
     z-index: 1;
     color: #7FADE3;
-    background-color: white;
+    
 }
-#MC {
+#p1 {
     position: absolute;
-    top: 50%;
-    left: 35%;
+    top: 20%;
+    left: 50%;
     transform: translate(-50%,-50%);
-    width: 200px;
-    height: 60px;
     text-align: center;
     line-height: 60px;
     color: #fff;
@@ -43,16 +36,13 @@ body {
     border-radius: 30px;
     z-index: 1;
     color: #7FADE3;
-    background-color: white;
+    
 }
-
-#changelog {
+#p2 {
     position: absolute;
-    top: 50%;
-    left: 80%;
+    top: 30%;
+    left: 50%;
     transform: translate(-50%,-50%);
-    width: 200px;
-    height: 60px;
     text-align: center;
     line-height: 60px;
     color: #fff;
@@ -65,77 +55,8 @@ body {
     border-radius: 30px;
     z-index: 1;
     color: #7FADE3;
-    background-color: white;
+    
 }
-#Csharp:hover{
-    background-color: #307FE2;
-}
-#Java:hover{
-    background-color: #307FE2;
-}
-#MC:hover{
-    background-color: #307FE2;
-}
-#changelog:hover{
-    background-color: #307FE2;
-}
-
-.middle{
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 100%;
-    text-align: center;
-  }
-  .btn{
-    display: inline-block;
-    width: 90px;
-    height: 90px;
-    background: #f1f1f1;
-    margin: 10px;
-    border-radius: 30%;
-    box-shadow: 0 5px 15px -5px #00000070;
-    color: #3498db;
-    overflow: hidden;
-    position: relative;
-  }
-  .btn i{
-    line-height: 90px;
-    font-size: 26px;
-    transition: 0.2s linear;
-  }
-  .btn:hover i{
-    transform: scale(1.3);
-    color: #f1f1f1;
-  }
-  .btn::before{
-    content: "";
-    position: absolute;
-    width: 120%;
-    height: 120%;
-    background: #3498db;
-    transform: rotate(45deg);
-    left: -110%;
-    top: 90%;
-  }
-  .btn:hover::before{
-    animation: aaa 0.7s 1;
-    top: -10%;
-    left: -10%;
-  }
-  @keyframes aaa {
-    0%{
-      left: -110%;
-      top: 90%;
-    }50%{
-      left: 10%;
-      top: -30%;
-    }100%{
-      top: -10%;
-      left: -10%;
-    }
-  }
-  
 
 * {
     margin: 0;
