--- a/Nanomic/Nanomichome.css
+++ b/Nanomic/Nanomichome.css
@@ -1,115 +1,3 @@
-body {
-    background-color: #003087;
-}
-
-#google {
-  align-items: center;
-  position: absolute;
-  top: 80%;
-  left: 37%;
-}
-#googleicon {
-  align-items: center;
-  position: absolute;
-  left:36% ;
-}
-#microsoft {
-  align-items: center;
-  position: absolute;
-  top: 80%;
-  left: 56%;
-}
-#microsofticon {
-  align-items: center;
-  position: absolute;
-  left:38% ;
-}
-
-#feedback {
-  position: absolute;
-  align-self: center;
-  align-items: center;
-  top: 70%;
-  left: 50%;
-  
-}
-
-#Csharp {
-    position: absolute;
-    top: 50%;
-    left: 65%;
-    transform: translate(-50%,-50%);
-    width: 200px;
-    height: 60px;
-    text-align: center;
-    line-height: 60px;
-    color: #fff;
-    font-size: 24px;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-family: sans-serif;
-    box-sizing: border-box;
-    background-size:400%;
-    border-radius: 30px;
-    z-index: 1;
-    color: #7FADE3;
-    background-color: white;
-}
-#MC {
-    position: absolute;
-    top: 50%;
-    left: 35%;
-    transform: translate(-50%,-50%);
-    width: 200px;
-    height: 60px;
-    text-align: center;
-    line-height: 60px;
-    color: #fff;
-    font-size: 24px;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-family: sans-serif;
-    box-sizing: border-box;
-    background-size:400%;
-    border-radius: 30px;
-    z-index: 1;
-    color: #7FADE3;
-    background-color: white;
-}
-
-#changelog {
-    position: absolute;
-    top: 50%;
-    left: 80%;
-    transform: translate(-50%,-50%);
-    width: 200px;
-    height: 60px;
-    text-align: center;
-    line-height: 60px;
-    color: #fff;
-    font-size: 24px;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-family: sans-serif;
-    box-sizing: border-box;
-    background-size:400%;
-    border-radius: 30px;
-    z-index: 1;
-    color: #7FADE3;
-    background-color: white;
-}
-#Csharp:hover{
-    background-color: #307FE2;
-}
-#Java:hover{
-    background-color: #307FE2;
-}
-#MC:hover{
-    background-color: #307FE2;
-}
-#changelog:hover{
-    background-color: #307FE2;
-}
 
 .middle{
     position: absolute;
@@ -126,7 +14,7 @@ body {
     margin: 10px;
     border-radius: 30%;
     box-shadow: 0 5px 15px -5px #00000070;
-    color: #3498db;
+    color: black;
     overflow: hidden;
     position: relative;
   }
@@ -144,7 +32,7 @@ body {
     position: absolute;
     width: 120%;
     height: 120%;
-    background: #3498db;
+    background: black;
     transform: rotate(45deg);
     left: -110%;
     top: 90%;
@@ -165,7 +53,32 @@ body {
       top: -10%;
       left: -10%;
     }
+}
+  
+
+.text{
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    font-size: 120px;
+    font-weight: 700;
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+    color: gray;
   }
+  .text:before{
+    content: 'Nanomic';
+    color: black;
+    position: absolute;
+    width: 0;
+    overflow: hidden;
+    transition: 0.9s;
+  }
+  .text:hover:before{
+    width: 100%;
+  }
+  
   
 
 * {
@@ -175,7 +88,7 @@ body {
     .box {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(180deg, rgba(83 86 90) 0%, rgba(75 79 84) 35%, rgba(16 24 32) 100%);
     }
     h2 {
     position: absolute;
