--- a/Home.css
+++ b/Home.css
@@ -43,7 +43,7 @@ body {
   align-items: center;
   position: absolute;
   top: 80%;
-  left: 37%;
+  left: 36%;
 }
 #googleicon {
   align-items: center;
@@ -66,8 +66,16 @@ body {
   position: absolute;
   align-self: center;
   align-items: center;
-  top: 70%;
-  left: 50%;
+  top: 75%;
+  left: 49.5%;
+  
+}
+#content {
+  position: absolute;
+  align-self: center;
+  align-items: center;
+  top: 49%;
+  left: 49.5;
   
 }
 
@@ -150,7 +158,7 @@ body {
 
 .middle{
     position: absolute;
-    top: 50%;
+    top: 60%;
     transform: translateY(-50%);
     width: 100%;
     text-align: center;
