--- a/Home.css
+++ b/Home.css
@@ -1,5 +1,47 @@
 body {
-    background-color: #003087;
+    background-color: rgb(65, 11, 22);
+}
+
+#text {
+  position: absolute;
+  top: 115%;
+  left: 40%;
+  border-radius: 50%;
+  border-width: 5px;
+  border-color: lightgoldenrodyellow;
+  display: inline-block;
+    width: 90px;
+    height: 90px;
+    background: #f1f1f1;
+    margin: 10px;
+    border-radius: 30%;
+    box-shadow: 0 5px 15px -5px #00000070;
+    color: #3498db;
+    overflow: hidden;
+    text-align: center;
+}
+#ttext {
+  position: absolute;
+  top: 115%;
+  left: 52%;
+  border-radius: 50%;
+  border-width: 5px;
+  border-color: lightgoldenrodyellow;
+  display: inline-block;
+    width: 90px;
+    height: 90px;
+    background: #f1f1f1;
+    margin: 10px;
+    border-radius: 30%;
+    box-shadow: 0 5px 15px -5px #00000070;
+    color: #3498db;
+    overflow: hidden;
+    text-align: center;
+}
+
+#languages {
+  position: absolute;
+  top: 110%;
 }
 
 #YT {
