--- a/Hometitle.css
+++ b/Hometitle.css
@@ -8,7 +8,7 @@
     font-weight: 700;
     letter-spacing: 0.2em;
     text-transform: uppercase;
-    color: gray;
+    color: black;
   }
   .text:before{
     content: 'RiRi';
