--- a/MC.css
+++ b/MC.css
@@ -132,6 +132,69 @@ body {
     color: #7FADE3;
     
 }
+#SCP {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 400px;
+    height: 60px;
+    text-align: center;
+    line-height: 60px;
+    color: #fff;
+    font-size: 24px;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-family: sans-serif;
+    box-sizing: border-box;
+    background-size:400%;
+    border-radius: 30px;
+    z-index: 1;
+    color: #7FADE3;
+    
+}
+#SCPINFO {
+    position: absolute;
+    top: 30%;
+    left: 25%;
+    transform: translate(-50%,-50%);
+    width: 400px;
+    height: 60px;
+    text-align: center;
+    line-height: 60px;
+    color: #fff;
+    font-size: 24px;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-family: sans-serif;
+    box-sizing: border-box;
+    background-size:400%;
+    border-radius: 30px;
+    z-index: 1;
+    color: #7FADE3;
+    
+}
+#SCPYT {
+    position: absolute;
+    top: 30%;
+    left: 75%;
+    transform: translate(-50%,-50%);
+    width: 400px;
+    height: 60px;
+    text-align: center;
+    line-height: 60px;
+    color: #fff;
+    font-size: 24px;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-family: sans-serif;
+    box-sizing: border-box;
+    background-size:400%;
+    border-radius: 30px;
+    z-index: 1;
+    color: #7FADE3;
+    
+}
 
 
 
