--- a/Home.css
+++ b/Home.css
@@ -1,84 +1,10 @@
-body {
-    background-color: grey
+#grad1 {
+  height: 1000px;
+
+  background-image: linear-gradient(to bottom right, #121212, white);
 }
 
-#nepalitext {
-  position: absolute;
-  top: 115%;
-  left: 40%;
-  border-radius: 50%;
-  border-width: 5px;
-  border-color: lightgoldenrodyellow;
-  display: inline-block;
-    width: 90px;
-    height: 90px;
-    background: #f1f1f1;
-    margin: 10px;
-    border-radius: 30%;
-    box-shadow: 0 5px 15px -5px #00000070;
-    color: #3498db;
-    overflow: hidden;
-    text-align: center;
-}
-#nepalittext {
-  position: absolute;
-  top: 115%;
-  left: 52%;
-  border-radius: 50%;
-  border-width: 5px;
-  border-color: lightgoldenrodyellow;
-  display: inline-block;
-    width: 90px;
-    height: 90px;
-    background: #f1f1f1;
-    margin: 10px;
-    border-radius: 30%;
-    box-shadow: 0 5px 15px -5px #00000070;
-    color: #3498db;
-    overflow: hidden;
-    text-align: center;
-}
-#slovaktext {
-  position: absolute;
-  top: 130%;
-  left: 40%;
-  border-radius: 50%;
-  border-width: 5px;
-  border-color: lightgoldenrodyellow;
-  display: inline-block;
-    width: 90px;
-    height: 90px;
-    background: #f1f1f1;
-    margin: 10px;
-    border-radius: 30%;
-    box-shadow: 0 5px 15px -5px #00000070;
-    color: #3498db;
-    overflow: hidden;
-    text-align: center;
-}
-#slovakttext {
-  position: absolute;
-  top: 130%;
-  left: 52%;
-  border-radius: 50%;
-  border-width: 5px;
-  border-color: lightgoldenrodyellow;
-  display: inline-block;
-    width: 90px;
-    height: 90px;
-    background: #f1f1f1;
-    margin: 10px;
-    border-radius: 30%;
-    box-shadow: 0 5px 15px -5px #00000070;
-    color: #3498db;
-    overflow: hidden;
-    text-align: center;
-}
 
-#languages {
-  position: absolute;
-  top: 110%;
-}
 
 #YT {
   position: absolute;
@@ -92,7 +18,7 @@ body {
 #GH {
   position: absolute;
   top: 20%;
-  left:40%;
+  left:45%;
 }
 #GHI {
   position: absolute;
@@ -101,7 +27,7 @@ body {
 #NM {
   position: absolute;
   top: 20%;
-  left:50%;
+  left:60%;
 }
 #NMI {
   position: absolute;
